# napari-split-dataset

./: .bumpversion.cfg  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  test.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
napari_split_dataset/: __init__.py  _reader.py  napari.yaml  napari_split_dataset.py
tests/: __init__.py  test_napari_split_dataset.py
tests/asset/: dict_shift.h5  dict_stack.h5
tests/asset/sample_3d/: 0000.h5  0002.h5  0003.h5
tests/asset/sample_4d/: 0001.h5  0002.h5
tests/assets/: array.h5  nodict.h5
tests/assets/sample_3d/: 0001.h5  stack_metadata.json
tests/assets/sample_4d/: 0000.h5  stack_metadata.json
