[metadata]
name = napari-split-dataset
version = 0.2.0
url = https://github.com/portugueslab/napari-split-dataset
author = You Wu @portugueslab
author_email = youkwu@neuro.mpg.de
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = MIT
description = split-dataset/hdf5 file reader for napari
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
# setup_requires = pytest-runner
install_requires = 
    numpy
    flammkuchen
    split_dataset
python_requires = >=3.7
tests_require = pytest>=3
test_suite = tests
include_package_data = True
packages = find_namespace:

[options.extras_require]
dev = 
    pytest
    pytest-cov
    black
    flake8
    isort

[options.entry_points]
napari.manifest = 
	napari-split-dataset = napari_split_dataset:napari.yaml

[options.package_data]
napari_split_dataset = napari.yaml

[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:napari_split_dataset/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
ignore = E203, W503
max-line-length = 88
exclude = __init__.py
